# curryrs

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  curryrs.cabal  justfile  stack.yaml
haskell/: curryrs.cabal
haskell-tests/: Test.hs
haskell/htest/: htest.cabal
haskell/tests/: Test.hs
hrgen/: Cargo.toml
hrgen/hs-type-parser/src/: lib.rs
hrgen/src/: main.rs
htest/: Setup.hs  chtest.c  hsbracket.c  htest.cabal
htest/src/: Lib.dump-hi  Lib.hs
rushs/: Makefile
rust/: build.rs
rust/hrgen/hs-type-parser/src/: lib.rs
rust/rtest/src/: lib.rs
rust/src/: convert.rs  types.rs
rust/tests/: haskell_import.rs
src/: Types.hs  build.rs  hsrt.rs  lib.rs
src/Curryrs/: Build.hs
tests/: haskell_import.rs
