name:                htest
version:             0.1.0.0
synopsis:            Test libraries for FFI from Haskell to Rust
description:         Please see README.md
license:             OtherLicense
license-files:       LICENSE-MIT, LICENSE-APACHE
author:              Michael Gattozzi
maintainer:          mgattozzi@gmail.com
copyright:           2016 Michael Gattozzi
build-type:          Custom
-- extra-source-files:
cabal-version:       >=1.10

custom-setup
  setup-depends:       base
                     , curryrs

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >= 4.7 && < 5
                     , curryrs
  default-language:    Haskell2010
